Fix a grey bar showing up on iphones on the review page

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -24,7 +24,6 @@ body {
 
 @media (orientation: portrait) {
     body {
-        background-color: #DFDFDF;
         background-image: url("/resources/images/geometric-mobile.jpg");
     }
 }
